# CampusBallot

./: CMakeLists.txt  README.md  build.bat  build_candidate.bat  build_cmake.bat  build_cmake2.bat  build_errors.txt  build_log.txt  compile_admin.bat  compile_candidate.bat  compile_candidate2.bat  compile_output2.txt  main.cpp  resources.qrc
build-audit/: CMakeCache.txt  Makefile  cmake_install.cmake
build-audit/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-audit/TheRealCampusBallot_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-audit/TheRealCampusBallot_autogen/6MB76OGVS6/: moc_AuthManager.cpp  moc_AuthManager.cpp.d  moc_RBACManager.cpp  moc_RBACManager.cpp.d
build-audit/TheRealCampusBallot_autogen/AWH56BEWUT/: moc_TamperDetector.cpp  moc_TamperDetector.cpp.d
build-audit/TheRealCampusBallot_autogen/DFYB2GAN4A/: moc_AcrylicWidget.cpp  moc_AcrylicWidget.cpp.d  moc_AnimatedButton.cpp  moc_AnimatedButton.cpp.d  moc_Sidebar.cpp  moc_Sidebar.cpp.d  moc_StatCard.cpp  moc_StatCard.cpp.d  moc_ToastNotification.cpp  moc_ToastNotification.cpp.d
build-audit/TheRealCampusBallot_autogen/EWIEGA46WW/: qrc_resources.cpp
build-audit/TheRealCampusBallot_autogen/J3CC273FWE/: moc_AdminPanel.cpp  moc_AdminPanel.cpp.d  moc_DashboardView.cpp  moc_DashboardView.cpp.d  moc_LoginView.cpp  moc_LoginView.cpp.d  moc_MainWindow.cpp  moc_MainWindow.cpp.d  moc_ResultsView.cpp  moc_ResultsView.cpp.d  moc_SettingsView.cpp  moc_SettingsView.cpp.d  moc_SetupWizard.cpp  moc_SetupWizard.cpp.d  moc_SplashScreen.cpp  moc_SplashScreen.cpp.d  moc_UserManagementView.cpp  moc_UserManagementView.cpp.d  moc_VotingKiosk.cpp  moc_VotingKiosk.cpp.d
build-audit/TheRealCampusBallot_autogen/KIXYDUAWSN/: moc_PluginManager.cpp  moc_PluginManager.cpp.d
build-audit/TheRealCampusBallot_autogen/L6XBWHIX5O/: moc_BackupManager.cpp  moc_BackupManager.cpp.d
build-audit/TheRealCampusBallot_autogen/PRMOGMWJPH/: moc_SystemManager.cpp  moc_SystemManager.cpp.d
build-audit/TheRealCampusBallot_autogen/TO5YODZPY3/: moc_AuditManager.cpp  moc_AuditManager.cpp.d
build-audit/TheRealCampusBallot_autogen/XUWP55ROXA/: moc_AuthViewModel.cpp  moc_AuthViewModel.cpp.d  moc_DashboardViewModel.cpp  moc_DashboardViewModel.cpp.d  moc_ResultsViewModel.cpp  moc_ResultsViewModel.cpp.d
build-audit/TheRealCampusBallot_autogen/ZJFYVIBJKQ/: moc_ElectionManager.cpp  moc_ElectionManager.cpp.d  moc_VoteManager.cpp  moc_VoteManager.cpp.d
src/core/: Constants.h  Models.h  SystemManager.cpp  SystemManager.h  Utils.h
src/modules/audit/: AuditManager.cpp  AuditManager.h
src/modules/auth/: AuthManager.cpp  AuthManager.h  IAuthProvider.h  RBACManager.cpp  RBACManager.h
src/modules/backup/: BackupManager.cpp  BackupManager.h
src/modules/election/: ElectionManager.cpp  ElectionManager.h  VoteManager.cpp  VoteManager.h
src/modules/plugin/: IPlugin.h  PluginManager.cpp  PluginManager.h
src/modules/storage/: TestAdmissionStorage.cpp  TestAdmissionStorage.h
src/modules/storage/interfaces/: IStorageProvider.h
src/modules/storage/providers/: SQLiteStorageProvider.cpp  SQLiteStorageProvider.h
src/security/: AES256Provider.cpp  AES256Provider.h  DigitalSignature.cpp  DigitalSignature.h  HashProvider.cpp  HashProvider.h  IEncryptionProvider.h  TamperDetector.cpp  TamperDetector.h
src/ui/components/: AcrylicWidget.cpp  AcrylicWidget.h  AnimatedButton.cpp  AnimatedButton.h  Sidebar.cpp  Sidebar.h  StatCard.cpp  StatCard.h  ToastNotification.cpp  ToastNotification.h
src/ui/dialogs/: CandidateFormDialog.cpp  CandidateFormDialog.h
src/ui/styles/: light.qss  modern.qss
src/ui/viewmodels/: AuthViewModel.cpp  AuthViewModel.h  DashboardViewModel.cpp  DashboardViewModel.h  ResultsViewModel.cpp  ResultsViewModel.h
src/ui/views/: AdminPanel.cpp  AdminPanel.h  CandidateDialog.cpp  CandidateDialog.h  DashboardView.cpp  DashboardView.h  LoginView.cpp  LoginView.h  MainWindow.cpp  MainWindow.h  ResultsView.cpp  ResultsView.h  SettingsView.cpp  SettingsView.h  SetupWizard.cpp  SetupWizard.h  SplashScreen.cpp  SplashScreen.h  SuperAdminVotingKiosk.h  UserManagementView.cpp  UserManagementView.h  VotingKiosk.cpp  VotingKiosk.h
